chg: search string

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -30,7 +30,7 @@
     "View All": "View All",
     "Stores Near Me": "Stores Near Me",
     "Deliver to": "Deliver to",
-    "Search": "Search",
+    "Search": "Search...",
     "Search Product List": {
       "No products available": "No products available"
     }
