chg: i18n support for mr, ta, bn

--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -112,6 +112,8 @@
     "Hindi": "हिंदी",
     "English": "English",
     "Marathi": "मराठी",
+    "Tamil": "தமிழ்",
+    "Bengali": "বাংলা",
     "Choose Language": "भाषा निवडा",
     "Select a language": "एक भाषा निवडा"
   },
