--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -112,6 +112,8 @@
     "Hindi": "हिंदी",
     "English": "English",
     "Marathi": "मराठी",
+    "Tamil": "தமிழ்",
+    "Bengali": "বাংলা",
     "Choose Language": "Choose Language",
     "Select a language": "Select a language"
   },
