--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -112,6 +112,8 @@
     "Hindi": "हिंदी",
     "English": "English",
     "Marathi": "मराठी",
+    "Tamil": "தமிழ்",
+    "Bengali": "বাংলা",
     "Choose Language": "भाषा चुनें",
     "Select a language": "भाषा चुनें"
   },
