add: scan barcode and navigate to provider details page

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -503,5 +503,8 @@
   },
   "Orders": {
     "No data found": "কোন তথ্য পাওয়া যায়নি"
+  },
+  "Global": {
+    "Details not available": "বস্টোরের বিবরণ পাওয়া যায় না"
   }
 }
