--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -503,5 +503,8 @@
   },
   "Orders": {
     "No data found": "No data found"
+  },
+  "Global": {
+    "Details not available": "Store Details not available"
   }
 }
