chg: voice to text using @react-native-voice/voice

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -31,6 +31,7 @@
     "Stores Near Me": "আমার কাছাকাছি দোকান",
     "Deliver to": "সরবরাহ করা",
     "Search": "অনুসন্ধান করুন...",
+    "Try Saying Something, We are Listening": "কিছু বলার চেষ্টা করুন, আমরা শুনছি",
     "Search Product List": {
       "No products available": "কোন পণ্য উপলব্ধ"
     }
