--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -31,6 +31,7 @@
     "Stores Near Me": "Stores Near Me",
     "Deliver to": "Deliver to",
     "Search": "Search...",
+    "Try Saying Something, We are Listening": "Try Saying Something, We are Listening",
     "Search Product List": {
       "No products available": "No products available"
     }
