--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -31,6 +31,7 @@
     "Stores Near Me": "मेरे आस-पास के स्टोर",
     "Deliver to": "के लिए वितरित",
     "Search": "खोज",
+    "Try Saying Something, We are Listening": "कुछ कहने की कोशिश करो, हम सुन रहे हैं",
     "Search Product List": {
       "No products available": "कोई उत्पाद उपलब्ध नहीं"
     }
