--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -31,6 +31,7 @@
     "Stores Near Me": "माझ्या जवळची दुकाने",
     "Deliver to": "कडे वितरीत करा",
     "Search": "शोधा",
+    "Try Saying Something, We are Listening": "काहीतरी सांगण्याचा प्रयत्न करा, आम्ही ऐकत आहोत",
     "Search Product List": {
       "No products available": "कोई उत्पाद उपलब्ध नहीं"
     }
