--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -31,6 +31,7 @@
     "Stores Near Me": "எனக்கு அருகிலுள்ள கடைகள்",
     "Deliver to": "வழங்க",
     "Search": "தேடு...",
+    "Try Saying Something, We are Listening": "ஏதாவது சொல்ல முயற்சிக்கவும், நாங்கள் கேட்கிறோம்",
     "Search Product List": {
       "No products available": "தயாரிப்புகள் எதுவும் கிடைக்கவில்லை"
     }
